--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="conteiner">
             <div class="header_inner">
-                <img class="logo" src="/img/logo.PNG" alt="">
+                <img class="logo" src="img/logo.png" alt="">
                 <div class="header_text">
                     <div class="header_title">ПОЛУЧИ АБОНЕМЕНТ</div>
                     <div class="header_subtitle">ЗА НАШ СЧЕТ</div>
