заменил путь к картинкам

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
                     <div class="header_title">ПОЛУЧИ АБОНЕМЕНТ</div>
                     <div class="header_subtitle">ЗА НАШ СЧЕТ</div>
                 </div>
-                <img class="header_img" src="/img/KV.png" alt="">
+                <img class="header_img" src="img/KV.png" alt="">
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
     <div class="first">
         <div class="conteiner">
             <div class="first_item">
-                <div class="kartinka"><img class="first_img" src="/img/abi.png" alt="">
+                <div class="kartinka"><img class="first_img" src="img/abi.png" alt="">
                 
                 <div class="vl"></div>
                 <div class="horizontal_dotted_line"></div>
@@ -55,7 +55,7 @@
                     </div>
 
                     <p class="ssulka">НА <a href="https://tickets.spartak.com">tickets.spartak.com</a></p>
-                    <a href="https://tickets.spartak.com"><img class="item_img" src="/img/BUTTON_ABB.png" alt=""></a>
+                    <a href="https://tickets.spartak.com"><img class="item_img" src="img/BUTTON_ABB.png" alt=""></a>
 
 
                 </div>
@@ -82,7 +82,7 @@
                 </div>
                 </div>
                 <div class="kartinka2">
-                <img class="first_img2" src="/img/img3.png" alt="">
+                <img class="first_img2" src="img/img3.png" alt="">
                 <div class="vl2"></div>
                 <div class="vl3"></div>
                 <div class="horizontal_dotted_line2"></div>
@@ -96,7 +96,7 @@
         <div class="conteiner">
             <div class="first_item">
                 <div class="kartinka4">
-                <img class="first_img3" src="/img/img4.png" alt="">
+                <img class="first_img3" src="img/img4.png" alt="">
                 <div class="vl4"></div></div>
                 <div class="first_item_content">
                     <div class="first_item_text">
@@ -108,7 +108,7 @@
                     <div class="first_red">
                         <p>ВАЖНО УКАЗАТЬ ПРОМОКОД<br>ПРИ РЕГИСТРАЦИИБ, ЧТОБЫ<br>ПОЛУЧИТЬ БОНУС</p>
                     </div>
-                    <a href="https://tickets.spartak.com"><img class="item_img" src="/img/REG.png" alt=""></a>
+                    <a href="https://tickets.spartak.com"><img class="item_img" src="img/REG.png" alt=""></a>
 
 
                 </div>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="ssulka4">ЕСЛИ УЖЕ ЗАРЕГИСТРИРОВАН <br>НА WINLINE</div>
                 </div>
-                <img class="first_img4" src="/img/kart4.png" alt="">
+                <img class="first_img4" src="img/kart4.png" alt="">
             </div>
         </div>
     </div>
@@ -143,14 +143,14 @@
     <div class="rules">
         <div class="conteiner">
             <a href="resources/images/cupis/spartak_season_ticket.pdf">
-                <img class="rules_img" src="/img/BUTTON_RULES.png" alt=""></a>
+                <img class="rules_img" src="img/BUTTON_RULES.png" alt=""></a>
         </div>
     </div>
     
 
     <div class="footer">
         <div class="conteiner">
-            <img class="logo2" src="/img/logo.png" alt="">
+            <img class="logo2" src="img/logo.png" alt="">
         </div>
     </div>
 
