--- a/Index.html
+++ b/Index.html
@@ -135,7 +135,9 @@
                     </div>
                     <div class="ssulka4">ЕСЛИ УЖЕ ЗАРЕГИСТРИРОВАН <br>НА WINLINE</div>
                 </div>
+                <div class="kartinka5">
                 <img class="first_img4" src="img/kart4.png" alt="">
+            </div>
             </div>
         </div>
     </div>
