--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>АБОНЕМЕНТ от WINLINE</title>
+    <title>Абонемент от WINLINE</title>
 </head>
 
 <body>
@@ -54,8 +54,8 @@
                         <div class="item_title">КУПИ <br> АБОНЕМЕНТ</div>
                     </div>
 
-                    <p class="ssulka">НА <a href="https://tickets.spartak.com">tickets.spartak.com</a></p>
-                    <a href="https://tickets.spartak.com"><img class="item_img" src="img/BUTTON_ABB.png" alt=""></a>
+                    <p class="ssulka">НА <a href="https://tickets.spartak.com" target="_blank">tickets.spartak.com</a></p>
+                    <a href="https://tickets.spartak.com" target="_blank"><img class="item_img" src="img/BUTTON_ABB.png" alt=""></a>
 
 
                 </div>
@@ -106,9 +106,9 @@
 
                     <div class="ssulka ssulka_min">ПРИ РЕГИСТРАЦИИ НА WINLINE</div>
                     <div class="first_red">
-                        <p>ВАЖНО УКАЗАТЬ ПРОМОКОД<br>ПРИ РЕГИСТРАЦИИБ, ЧТОБЫ<br>ПОЛУЧИТЬ БОНУС</p>
+                        <p>ВАЖНО УКАЗАТЬ ПРОМОКОД<br>ПРИ РЕГИСТРАЦИИ, ЧТОБЫ<br>ПОЛУЧИТЬ БОНУС</p>
                     </div>
-                    <a href="https://tickets.spartak.com"><img class="item_img" src="img/REG.png" alt=""></a>
+                    <a href="https://m.winline.ru/auth/registration?utm_source=fcspartak&utm_medium=site&utm_content=landing&utm_campaign=ab_camp" target="_blank"><img class="item_img" src="img/REG.png" alt=""></a>
 
 
                 </div>
@@ -144,7 +144,7 @@
 
     <div class="rules">
         <div class="conteiner">
-            <a href="resources/images/cupis/spartak_season_ticket.pdf">
+            <a href="https://spartak.com/stadium/winline-rules" target="_blank">
                 <img class="rules_img" src="img/BUTTON_RULES.png" alt=""></a>
         </div>
     </div>
